--- a/pom.xml
+++ b/pom.xml
@@ -8,17 +8,41 @@
 	<name>Archetype - ProjectExpo</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
+		
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
 			<version>RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+		<dependency>
+    		<groupId>com.mysql</groupId>
+    		<artifactId>mysql-connector-j</artifactId>
+    		<version>8.0.33</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>6.2.0.Final</version>
+			<version>6.1.7.Final</version>
 		</dependency>
+		
+
+		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
+<!--<dependency>
+    <groupId>javax.servlet.jsp</groupId>
+    <artifactId>javax.servlet.jsp-api</artifactId>
+    <version>2.3.3</version>
+    <scope>provided</scope>
+</dependency>
+	<dependency>
+  <groupId>org.apache.taglibs</groupId>
+  <artifactId>taglibs-standard-impl</artifactId>
+  <version>1.2.3</version>
+  <type>bundle</type>
+</dependency>-->
 	</dependencies>
 	<build>
 		<plugins>
