Added filter to check session

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,94 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="5.0">
-  <display-name>ProjectExpo</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-  </welcome-file-list>
-  <context-param>
-    <param-name>dbUrl</param-name>
-    <param-value>jdbc:mysql://localhost:3306/biblioteca</param-value>
-  </context-param>
-  <context-param>
-    <param-name>dbUser</param-name>
-    <param-value>root</param-value>
-  </context-param>
-  <context-param>
-    <param-name>dbPassword</param-name>
-    <param-value>mizuiro</param-value>
-  </context-param>
-  <servlet>
-    <description></description>
-    <display-name>CurrentExhibitsServlet</display-name>
-    <servlet-name>CurrentExhibitsServlet</servlet-name>
-    <servlet-class>web.visitor.CurrentExhibitsServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CurrentExhibitsServlet</servlet-name>
-    <url-pattern>/CurrentExhibitsServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>FutureEventsServlet</display-name>
-    <servlet-name>FutureEventsServlet</servlet-name>
-    <servlet-class>web.visitor.FutureEventsServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>FutureEventsServlet</servlet-name>
-    <url-pattern>/FutureEventsServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>BookedEventsServlet</display-name>
-    <servlet-name>BookedEventsServlet</servlet-name>
-    <servlet-class>web.visitor.BookedEventsServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>BookedEventsServlet</servlet-name>
-    <url-pattern>/BookedEventsServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>VisitorLoginServlet</display-name>
-    <servlet-name>VisitorLoginServlet</servlet-name>
-    <servlet-class>web.visitor.VisitorLoginServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>VisitorLoginServlet</servlet-name>
-    <url-pattern>/VisitorLoginServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>SingleEventServlet</display-name>
-    <servlet-name>SingleEventServlet</servlet-name>
-    <servlet-class>web.visitor.SingleEventServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>SingleEventServlet</servlet-name>
-    <url-pattern>/SingleEventServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>BookEventServlet</display-name>
-    <servlet-name>BookEventServlet</servlet-name>
-    <servlet-class>web.visitor.BookEventServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>BookEventServlet</servlet-name>
-    <url-pattern>/BookEventServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>VisitorSignupServlet</display-name>
-    <servlet-name>VisitorSignupServlet</servlet-name>
-    <servlet-class>web.visitor.VisitorSignupServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>VisitorSignupServlet</servlet-name>
-    <url-pattern>/VisitorSignupServlet</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="https://jakarta.ee/xml/ns/jakartaee"
+	xmlns:web="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	id="WebApp_ID" version="5.0">
+	<display-name>ProjectExpo</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+	</welcome-file-list>
+	<context-param>
+		<param-name>dbUrl</param-name>
+		<param-value>jdbc:mysql://localhost:3306/biblioteca</param-value>
+	</context-param>
+	<context-param>
+		<param-name>dbUser</param-name>
+		<param-value>root</param-value>
+	</context-param>
+	<context-param>
+		<param-name>dbPassword</param-name>
+		<param-value>mizuiro</param-value>
+	</context-param>
+	<filter>
+		<filter-name>VisitorSessionFilter</filter-name>
+		<filter-class>web.visitor.VisitorSessionFilter</filter-class>
+	</filter>
+	<servlet>
+		<description></description>
+		<display-name>CurrentExhibitsServlet</display-name>
+		<servlet-name>CurrentExhibitsServlet</servlet-name>
+		<servlet-class>web.visitor.CurrentExhibitsServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CurrentExhibitsServlet</servlet-name>
+		<url-pattern>/CurrentExhibitsServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>FutureEventsServlet</display-name>
+		<servlet-name>FutureEventsServlet</servlet-name>
+		<servlet-class>web.visitor.FutureEventsServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>FutureEventsServlet</servlet-name>
+		<url-pattern>/FutureEventsServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>BookedEventsServlet</display-name>
+		<servlet-name>BookedEventsServlet</servlet-name>
+		<servlet-class>web.visitor.BookedEventsServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BookedEventsServlet</servlet-name>
+		<url-pattern>/BookedEventsServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>VisitorLoginServlet</display-name>
+		<servlet-name>VisitorLoginServlet</servlet-name>
+		<servlet-class>web.visitor.VisitorLoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>VisitorLoginServlet</servlet-name>
+		<url-pattern>/VisitorLoginServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>SingleEventServlet</display-name>
+		<servlet-name>SingleEventServlet</servlet-name>
+		<servlet-class>web.visitor.SingleEventServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SingleEventServlet</servlet-name>
+		<url-pattern>/SingleEventServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>BookEventServlet</display-name>
+		<servlet-name>BookEventServlet</servlet-name>
+		<servlet-class>web.visitor.BookEventServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BookEventServlet</servlet-name>
+		<url-pattern>/BookEventServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>VisitorSignupServlet</display-name>
+		<servlet-name>VisitorSignupServlet</servlet-name>
+		<servlet-class>web.visitor.VisitorSignupServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>VisitorSignupServlet</servlet-name>
+		<url-pattern>/VisitorSignupServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
